--- a/back/references.bib
+++ b/back/references.bib
@@ -222,3 +222,12 @@
   language =    "chinese",
   year =        2017,
 }
+
+@online{thuthesis,
+  author =      {薛瑞尼},
+  title =       {\thuthesis: 清华大学学位论文模板},
+  citedate =    {2017-12-02},
+  url =         {https://github.com/xueruini/thuthesis},
+  language =    "chinese",
+  year =        2018,
+}
